# polar_analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  local_deploy.sh  pyproject.toml  repository.json
.github/workflows/: ci.yml  docker.yml
polar_analyzer/: Dockerfile  config.yaml  deploy.sh  requirements.txt  run.sh
src/: config.py  main.py  models.py  paths.py  performance_calc.py  polar_engine.py  polar_store.py  recorder.py  sample_filter.py  sea_state_classifier.py  signalk_auth.py  signalk_client.py  signalk_publisher.py  state_store.py  trip_manager.py  web_server.py
tests/: test_performance_calc.py  test_polar_engine.py  test_sample_filter.py
web/: app.js  index.html  style.css
