[project]
name = "polar-analyzer"
version = "0.1.0"
description = "Learns boat polars from live SignalK sailing data and publishes real-time performance metrics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Erich Buri"},
]
keywords = ["signalk", "sailing", "polars", "navigation", "marine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/eburi/polar_analyzer"
Repository = "https://github.com/eburi/polar_analyzer"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff ---

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
    "B008",   # function call in default argument — dataclass pattern
]

[tool.ruff.lint.isort]
known-first-party = [
    "config", "models", "paths", "signalk_client", "signalk_auth",
    "signalk_publisher", "state_store", "sample_filter", "polar_engine",
    "polar_store", "performance_calc", "trip_manager", "sea_state_classifier",
    "web_server", "recorder",
]

# --- Pytest ---

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
